fixed typos in html, added template game html

--- a/index.html
+++ b/index.html
@@ -5,13 +5,13 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Start</title>
-    <link rel="stylesheet" href="./assets/style.css">
+    <link rel="stylesheet" href="./Assets/style.css">
 </head>
 <body>
     <div class="container">
         <div id="quiz" class="flex-column flex-center">
             <h1>Test your knowledge!</h1>
-            <a href="/game.html" class="btn">Play</a>
+            <a href="./Assets/game.html" class="btn">Play</a>
             <a href="/highscores.html" id="highscore-btn" class="btn">High Scores</a>
             
         </div>
