--- a/Assets/game.html
+++ b/Assets/game.html
@@ -19,6 +19,14 @@
                     <div id="progressBarFull"></div>
                 </div>
             </div>
+            <div class="hud-item">
+                <P class="hud-prefix">
+                    score
+                </P>
+                <h1 class="hud-main-text" id = "score">
+                    0
+                </h1>
+            </div>
         </div>
     </div>
 </body>
