working quiz, need to add timer and end page

--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
         <div id="quiz" class="flex-column flex-center">
             <h1>Test your knowledge!</h1>
             <a href="./Assets/game.html" class="btn">Play</a>
-            <a href="/highscores.html" id="highscore-btn" class="btn">High Scores</a>
+            <a href="./Assets/highscores.html" id="highscore-btn" class="btn">High Scores</a>
             
         </div>
     </div>
