--- a/Assets/game.html
+++ b/Assets/game.html
@@ -28,6 +28,25 @@
                 </h1>
             </div>
         </div>
+        <h1 id="question">this will be the question</h1>
+        <div class="choice-container">
+            <p class="choice-prefix">A</p>
+            <p class="choice-text" data-number="1">choice1</p>
+        </div>
+        <div class="choice-container">
+            <p class="choice-prefix">B</p>
+            <p class="choice-text" data-number="2">choice2</p>
+        </div>
+        <div class="choice-container">
+            <p class="choice-prefix">C</p>
+            <p class="choice-text" data-number="4">choice3</p>
+        </div>
+        <div class="choice-container">
+            <p class="choice-prefix">D</p>
+            <p class="choice-text" data-number="4">choice4</p>
+        </div>
+
     </div>
+    <script src="./Assetsgame.js"></script>
 </body>
 </html>
